feat: adicionado tratamento de logica no service faq para as palavras serem todas em minusculas